# html2md

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  GEMINI.md  MANIFEST.in  README.md  app.py  apply_fix.py  bench.py  benchmark.py  benchmark2.py  benchmark3.py  benchmark4.py  close-invalid-prs.sh  commit_msg.txt  debug.py  debug_mock.py  fix.patch  fix_bat_sh.py  fix_cache_check.py  fix_github_actions.py  fix_gui.py  fix_mkdir.py  fix_title.sh  fix_vulnerability.py  fix_workflow.py  get_logs.md  gui-url-convert.ps1  my_patch.patch  package.json  parse_test.ps1  patch.diff  patch.py  patch_app.patch  patch_cli_fix.py  patch_cli_global_session.py  patch_copilot.py  patch_copilot2.py  patch_github_actions.py  (+63 more)
.claude/: settings.json
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  gemini-code-assist.yaml
.jules/: bolt.md  memory_record.md  palette.md  sentinel.md
adr/: 0000-template.md  0001-record-architecture-decisions.md
docs/: architecture.md  business-rules.md  codebase_issue_tasks.md  domain-model.md  integrations.md  maintenance-task-proposals.md  overview.md
html2md/: .._  .mypy.ini  pyproject.toml  setup-html2md.ps1
pr-rules/: common.md  edge-cases.md  python.md  service-html2md.md
scripts/: check_agents_consistency.sh  claude_api_task.py  healthcheck.mjs  healthcheck.py  lint_ai_pr_guard_workflow.sh  self-heal.mjs  self-heal.py  self_heal.py  test_baseline_hook.sh  test_settings_allowlist.sh
tests/: conftest.py  reproduce_issue.py  test_ai_assisted_pr_guard.py  (+48 more)
(+49 files in other folders)
